syntax = "proto3";

option java_package = "com.huasheng.quant.open.sdk.protobuf.trade.request";
option java_outer_classname = "TradeQueryHistoryFundJourListRequestProto";
message TradeQueryHistoryFundJourListRequest {
	string exchangeType = 1;
	string queryParamStr = 2;
	int32 queryCount = 3;
	int32 startDate=4;
	int32 endDate=5;
}
