syntax = "proto3";

option java_package = "com.huasheng.quant.open.sdk.protobuf.trade.vo";
option java_outer_classname = "CondOrderVoProto";
message CondOrderVo {
    string condOrderId = 1; // 条件单号
    string dataType = 2; // 股票dataType
    string stockCode = 3; // 股票代码
	string stockName = 4; // 股票名称
    string stockNameTc = 5; // 股票名称-繁体
    string stockNameEn = 6; // 股票名称-英文
    string exchangeType = 7; // 市场代码
    
    string entrustType = 8;  // 31止盈限价单 32止盈市价单(美股) 33止损限价单 34止损市价单(美股) 35追踪止损限价单 36追踪止损市价单(美股)
    string sessionType = 9; // 3只支持盘中 6美股只支持盘前盘后 7美股支持盘中及盘前盘后
    string status = 10; // 条件单状态  1:待触发 2:已触发 3:暂停 4:已过期 5:已删除 6:错误 8:止盈止损单失效 9:除权除息失效
    string canBeCancel = 11; // 是否可以撤单 0否 1是
    string canBeModify = 12; // 是否可以改单 0否 1是
    
    string entrustBs = 13; // 买卖方向  '1'-多头开仓、'2'-多头平仓、'3'-空头平仓、'4'-空头开仓
    string entrustAmount = 14; // 委托数量
    
    string createTime = 15; // 下单时间
    string startTime = 16; // 启动时间 空为立即执行
    string endTime = 17; // 到期时间 为空当天24点到期
    string errorCode = 18; // 错误码
    string errorMsg = 19; // 异常信息
    
    string condValue = 20; // 条件值 价格/百分比值/时间戳
    string condPrice = 21; // 条件指定价
    string condTrackType = 22; // 条件跟踪类型 1百分比、2价差、3价格
}